Add playlist-sync and group-wait to SyncPlay

--- a/package.json
+++ b/package.json
@@ -198,7 +198,11 @@
           "src/components/subtitlesettings/subtitlesettings.js",
           "src/components/syncPlay/groupSelectionMenu.js",
           "src/components/syncPlay/playbackPermissionManager.js",
+          "src/components/syncPlay/syncPlayHelper.js",
           "src/components/syncPlay/syncPlayManager.js",
+          "src/components/syncPlay/syncPlayPlaybackCore.js",
+          "src/components/syncPlay/syncPlayQueueCore.js",
+          "src/components/syncPlay/syncPlayQueueManager.js",
           "src/components/syncPlay/timeSyncManager.js",
           "src/components/themeMediaPlayer.js",
           "src/components/tabbedview/tabbedview.js",
