--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "libass-wasm": "https://github.com/jellyfin/JavascriptSubtitlesOctopus#4.0.0-jf-smarttv",
     "material-design-icons-iconfont": "^6.1.0",
     "native-promise-only": "^0.8.0-a",
+    "p2p-media-loader-core": "^0.6.2",
+    "p2p-media-loader-hlsjs": "^0.6.2",
     "page": "^1.11.6",
     "query-string": "^6.13.2",
     "resize-observer-polyfill": "^1.5.1",
